# fetchr

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  run
docs/: ai_prompt_engine.md  architect.md  changelog.md  cli_spec.md
src/: ai.rs  auto.rs  config.rs  download.rs  errors.rs  feedback.rs  main.rs  search.rs
