[package]
name = "fetchr"
version = "1.0.0"
edition = "2021"
authors = ["Aaron Aalto"]
description = "AI-powered image asset fetcher - retrieve multiple assets at once"
license = "MIT"
readme = "README.md"
keywords = ["cli", "ai", "images", "assets", "search"]
categories = ["command-line-utilities"]

[[bin]]
name = "af"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file
toml = "0.8"
dirs = "5"

# Progress bars
indicatif = "0.17"

# Error handling
anyhow = "1"
